add a viewer